src/objects/AP_Country_specs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Download_URL__c</fullName>
        <label>Download_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Library_Doc_Name__c</fullName>
        <description>If the url is empty use this field to get the document from libraries</description>
        <label>Library Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_label__c</fullName>
        <label>Link label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Airline Participation Country specifics</label>
    <listViews>
        <fullName>Country_specs_bank_mandates</fullName>
        <columns>NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Download_URL__c</columns>
        <columns>Link_label__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Country specs bank mandates</label>
        <language>en_US</language>
    </listViews>
</CustomObject>